revise all flows with appending cms
